2006-02-10	Benedikt Meurer <benny@xfce.org>

	* doc/C/Terminal.xml.in, terminal/main.c: Apply Diachi's 2nd typo
	  correction patch. Bug #1443.

2006-02-09	Benedikt Meurer <benny@xfce.org>

	* doc/C/Terminal.xml.in: Apply Daichi's documentation patch to fix
	  various typos. Bug #1443.

2006-02-08	Benedikt Meurer <benny@xfce.org>

	* NEWS, THANKS: Apply Daichi's name correction patch.

2006-02-06	Benedikt Meurer <benny@xfce.org>

	* helpers/Makefile.am, helpers/exo-open-browser.desktop.in,
	  helpers/exo-open-mailer.desktop.in: Add support for exo-open to
	  the helper framework.

2006-01-28	Benedikt Meurer <benny@xfce.org>

	* terminal/Makefile.am: Be sure to include <config.h> in
	  terminal/terminal-enum-types.h first. This fixes bug #1388.

2006-01-11	Daichi Kawahata <daichi@xfce.org>

	* configure.in.in: Add "ca" to XDT_I18N().

2006-01-03	Benedikt Meurer <benny@xfce.org>

	* doc/C/Terminal.xml.in, terminal/terminal-window.c,
	  terminal/main.c, Terminal-toolbars.ui, Terminal.ui: Update copyright.
	* terminal/stock-icons/, terminal/terminal-stock.{c,h}, Makefile.am,
	  icons/, configure.in.in, terminal/Makefile.am, pixmaps/,
	  terminal/main.c, terminal/terminal-helper-dialog.c,
	  terminal/terminal-preferences-dialog.c, terminal/terminal-window.c,
	  terminal/terminal-toolbars-view.c: Reorganize the stock icon handling
	  to use themed icons instead of hardcoded defaults. The stock icon
	  names weren't changed, so existing Gtk+ themes will continue to work
	  properly.
	* terminal/terminal-window.c, terminal/terminal-preferences-dialog.c,
	  terminal/terminal-shortcut-editor.c: Use stock-id macros.
	* Terminal.desktop.in: Add Version key.
	* terminal/terminal-accel-map.c, terminal/terminal-app.c,
	  terminal/terminal-helper-dialog.c, terminal/terminal-helper.c,
	  terminal/terminal-image-loader.c, terminal/terminal-monitor.c,
	  terminal/terminal-preferences-dialog.c,
	  terminal/terminal-preferences.c, terminal/terminal-screen.c,