@@ -1,3 +1,9 @@
+2006-02-14	Benedikt Meurer <benny@xfce.org>
+
+	* terminal/terminal-screen.c(terminal_screen_get_child_environment):
+	  Set DISPLAY properly for multi-screen per display environments.
+	  Bug #1461.
+
 2006-02-10	Benedikt Meurer <benny@xfce.org>
 
 	* doc/C/Terminal.xml.in, terminal/main.c: Apply Diachi's 2nd typo
